Work in progress on getting the scales working

--- a/SimpleScene/_SimpleScene.csproj
+++ b/SimpleScene/_SimpleScene.csproj
@@ -114,9 +114,7 @@
     <Compile Include="Meshes\Buffers\SSArrayBuffer.cs" />
     <Compile Include="Meshes\Buffers\SSIndexBuffer.cs" />
     <Compile Include="Meshes\Buffers\SSVertexBuffer.cs" />
-    <Compile Include="Meshes\Buffers\SSVertexFormats.cs" />
     <Compile Include="Meshes\Buffers\SSAttributeBuffer.cs" />
-    <Compile Include="Meshes\Buffers\SSAttributeFormats.cs" />
     <Compile Include="Util\Interpolate.cs" />
     <Compile Include="Meshes\ParticleSystems\SSParticleSystem.cs" />
     <Compile Include="Meshes\ParticleSystems\SSInstancedParticleRenderer.cs" />
@@ -125,6 +123,8 @@
     <Compile Include="Meshes\ParticleSystems\BodiesFieldGenerators.cs" />
     <Compile Include="Meshes\ParticleSystems\ParticleEmitters.cs" />
     <Compile Include="Meshes\ParticleSystems\ParticleEffectors.cs" />
+    <Compile Include="Meshes\Buffers\AttributeFormats.cs" />
+    <Compile Include="Meshes\Buffers\VertexFormats.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
