Drafting the instancing shader

--- a/SimpleScene/_SimpleScene.csproj
+++ b/SimpleScene/_SimpleScene.csproj
@@ -125,6 +125,7 @@
     <Compile Include="Meshes\ParticleSystems\ParticleEffectors.cs" />
     <Compile Include="Meshes\Buffers\AttributeFormats.cs" />
     <Compile Include="Meshes\Buffers\VertexFormats.cs" />
+    <Compile Include="Core\SSInstanceShaderProgram.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
