Made particle system renderer work with any indexed mesh

--- a/SimpleScene/_SimpleScene.csproj
+++ b/SimpleScene/_SimpleScene.csproj
@@ -117,7 +117,6 @@
     <Compile Include="Meshes\Buffers\SSAttributeBuffer.cs" />
     <Compile Include="Util\Interpolate.cs" />
     <Compile Include="Meshes\ParticleSystems\SSParticleSystem.cs" />
-    <Compile Include="Meshes\ParticleSystems\SSInstancedParticleRenderer.cs" />
     <Compile Include="Meshes\ParticleSystems\ParticlesFieldGenerators.cs" />
     <Compile Include="Meshes\ParticleSystems\ParticlesPlaneGenerators.cs" />
     <Compile Include="Meshes\ParticleSystems\BodiesFieldGenerators.cs" />
@@ -127,6 +126,8 @@
     <Compile Include="Meshes\Buffers\VertexFormats.cs" />
     <Compile Include="Core\SSInstanceShaderProgram.cs" />
     <Compile Include="Meshes\SSIndexedMesh.cs" />
+    <Compile Include="Meshes\ParticleSystems\SSInstancedMeshRenderer.cs" />
+    <Compile Include="Meshes\Shapes\SSMeshQuad.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
