--- a/SimpleScene/_SimpleScene.csproj
+++ b/SimpleScene/_SimpleScene.csproj
@@ -6,6 +6,8 @@
     <ProjectGuid>{4A7A056C-CB90-4F29-95DE-EAC471A6CBD7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>SimpleScene</RootNamespace>
+    <ProductVersion>8.0.30703</ProductVersion>
+    <SchemaVersion>2.0</SchemaVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -131,6 +133,7 @@
     <Compile Include="Meshes\Shapes\SSTexturedQuad.cs" />
     <Compile Include="Meshes\Shapes\SSTexturedCube.cs" />
     <Compile Include="Util\Prefs.cs" />
+    <Compile Include="Meshes\ParticleSystems\AcmeExplosion.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
