More changes relevant to implementing AcmeExplosions

--- a/SimpleScene/_SimpleScene.csproj
+++ b/SimpleScene/_SimpleScene.csproj
@@ -133,7 +133,7 @@
     <Compile Include="Meshes\Shapes\SSTexturedQuad.cs" />
     <Compile Include="Meshes\Shapes\SSTexturedCube.cs" />
     <Compile Include="Util\Prefs.cs" />
-    <Compile Include="Meshes\ParticleSystems\AcmeExplosion.cs" />
+    <Compile Include="Meshes\ParticleSystems\AcmeExplosionSystem.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
