--- a/TestBench0/TestBench0.csproj
+++ b/TestBench0/TestBench0.csproj
@@ -6,7 +6,7 @@
     <ProjectGuid>{E028B740-9EBB-491B-8080-CDED0AAD2F92}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>WavefrontOBJViewer</RootNamespace>
-    <AssemblyName>WavefrontOBJViewer</AssemblyName>
+    <AssemblyName>TestBench0</AssemblyName>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
   </PropertyGroup>
