--- a/SimpleScene/_SimpleScene.csproj
+++ b/SimpleScene/_SimpleScene.csproj
@@ -6,6 +6,8 @@
     <ProjectGuid>{4A7A056C-CB90-4F29-95DE-EAC471A6CBD7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>SimpleScene</RootNamespace>
+    <ProductVersion>8.0.30703</ProductVersion>
+    <SchemaVersion>2.0</SchemaVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -169,6 +171,9 @@
     </None>
     <None Include="..\Assets\Shaders\Instancing\instance_vertex.glsl">
       <Link>Assets\Shaders\Instancing\instance_vertex.glsl</Link>
+    </None>
+    <None Include="..\Assets\Shaders\Shadowmap\instance_pssm_vertex.glsl">
+      <Link>Assets\Shaders\Shadowmap\instance_pssm_vertex.glsl</Link>
     </None>
   </ItemGroup>
   <ItemGroup>
