More work in progress on instance pssm. Better extension checking elsewhere

--- a/SimpleScene/_SimpleScene.csproj
+++ b/SimpleScene/_SimpleScene.csproj
@@ -134,6 +134,7 @@
     <Compile Include="Meshes\Shapes\SSTexturedCube.cs" />
     <Compile Include="Util\Prefs.cs" />
     <Compile Include="Util\Color4Helper.cs" />
+    <Compile Include="Core\SSInstancePssmShaderProgram.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
