Unified texture setup information under a variable in SSObject and SSAbstractMesh

--- a/SimpleScene/_SimpleScene.csproj
+++ b/SimpleScene/_SimpleScene.csproj
@@ -148,6 +148,7 @@
     <Compile Include="Meshes\Skeletal\SSSkeletalMesh.cs" />
     <Compile Include="Meshes\Shapes\SSTexturedNormalQuad.cs" />
     <Compile Include="Meshes\SSVertexMesh.cs" />
+    <Compile Include="Core\SSTextureMaterial.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
