--- a/SimpleScene/_SimpleScene.csproj
+++ b/SimpleScene/_SimpleScene.csproj
@@ -150,8 +150,9 @@
     <Compile Include="Util\Files\SSMD5AnimParser.cs" />
     <Compile Include="Util\Files\SSMD5MeshParser.cs" />
     <Compile Include="Util\Files\SSMD5Parser.cs" />
-    <Compile Include="Util\Files\SSDoomMtrInfo.cs" />
     <Compile Include="Util\Files\SSWavefrontMTLInfo.cs" />
+    <Compile Include="Util\Files\SSDoomMTRInfo.cs" />
+    <Compile Include="Util\Files\SSWavefrontParser.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
