--- a/SimpleScene/_SimpleScene.csproj
+++ b/SimpleScene/_SimpleScene.csproj
@@ -156,6 +156,7 @@
     <Compile Include="Meshes\Skeletal\SSBindPoseSkeletalController.cs" />
     <Compile Include="Meshes\Skeletal\SSAnimationStateMachineSkeletalController.cs" />
     <Compile Include="Meshes\Skeletal\SSParametricJointsController.cs" />
+    <Compile Include="Meshes\Skeletal\SSSimpleObjectTrackingController.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
